--- a/index.html
+++ b/index.html
@@ -12,48 +12,28 @@
   </head>
   <body>
     <section  id="fullPage ">
-      <header class="col-sm-12 col-md-6 offset-md-3">
-        <img src="img/CrpsWffls-Rusty-Logo-JPEG.jpg" alt="">
+      <header class="col-sm-12 col-md-4 offset-md-4">
+        <img src="img/CrpsWffls-Rusty-Logo-JPEG-edited.jpg" alt="" style="margin:60px 0px">
         <p id="is-open">
           <i class="glyphicon glyphicon-time">
             <span class="text"></span>
           </i>
         </p>
-        <button type="button" class="btn waffleBtn waffleBtnColor" data-toggle="modal" data-target="#mapModal">
-          Location
-        </button>
-        <button type="button" class="btn waffleBtn waffleBtnColor" data-toggle="modal" data-target="#contactModal">
-          Information
-        </button>
-        <button type="button" class="btn waffleBtn waffleBtnColor" data-toggle="modal" data-target="#orderModal">
-          Order
-        </button>
-
-          <!-- Modal -->
-          <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Contact Information</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <div id="contactInfo">
-                    <p>The Crepes and Waffles Bar</p>
-                    <p>3000 North Miami Avenue, Miami, Florida 33127, United States</p>
-                    <p>pau@qolibrimiami.com</p>
-                    <p>(786) 553 - 3562</p>
-
-                    <p>Horario</p>
-                    <p>Abre hoy 06:00 p. m. – 11:45 p. m.</p>
-
-                  </div>
-                </div>
-              </div>
-            </div>
+        <div class="row col-sm-12" style="margin:0px">
+          <div class="col-sm-12 col-md-6" style="padding:0px 5px">
+            <button type="button" class="btn waffleBtn waffleBtnColor col-12" data-toggle="modal" data-target="#mapModal">
+              Location
+            </button>
           </div>
+          <div class="col-sm-12 col-md-6" style="padding:0px 5px">
+            <button type="button" class="btn waffleBtn waffleBtnColor col-12" data-toggle="modal" data-target="#orderModal">
+              Order
+            </button>
+          </div>
+
+
+
+        </div>
 
           <div class="modal fade" id="mapModal" tabindex="-1" role="dialog" aria-labelledby="mapModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
@@ -75,13 +55,24 @@
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-body">
-                  <h3>IN CONSTRUCTION..</h3>
-                  <h4>MEANWHILE YOU CAN ORDER FROM US TO PICK UP</h4>
+                  <h3 class="mx-auto text-center">IN CONSTRUCTION...</h3>
+          				<h4 class="text-center w-100">MEANWHILE YOU CAN ORDER FROM US TO PICK UP</h4>
 
-                    <p>@ (786) 553 - 3562</p>
-                    <p>DELIVERY</p>
+                    	<p class="text-center" style="text-decoration:underline">3000 North Miami Avenue, Miami, Florida 33127, United States</p>
+                    <div class="alert alert-secondary mt-5">
+              				<h4 class="col-sm-12 text-center">Contact</h4>
+                      <div class="row">
+                        <p class="col-sm-12 col-md-6 text-center">pau@qolibrimiami.com</p>
+                				<p class="col-sm-12 col-md-6 text-center">(786) 553 - 3562</p>
+                      </div>
+              			</div>
+                    <p id="is-open">
+                      <i class="glyphicon glyphicon-time">
+                        <span class="text"></span>
+                      </i>
+                    </p>
 
-                    <a href="https://www.doordash.com/store/qolibri-miami-676771/en-US" class="btn waffleBtn waffleBtnColor">Order Here</a>
+                    <a href="https://www.doordash.com/store/qolibri-miami-676771/en-US" class="btn waffleBtn waffleBtnColor w-100">Order Here</a>
                 </div>
               </div>
             </div>
@@ -90,8 +81,8 @@
 
     </section>
 
-    <footer>
-      Copyright © 2020 The Crepes and Waffles Bar - Todos los derechos reservados.
+    <footer class="fixed-bottom">
+      <p style="font-size:14px">Copyright © 2020 The Crepes and Waffles Bar - Todos los derechos reservados.</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
