--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,11 @@
     <title>The Crepes and Waffles Bar</title>
   </head>
   <body class="col-sm-12 col-md-10 offset-md-1" >
+    <div class="fixed-top text-left">
+      <a href="index.html" type="button" class="btn waffleBtn waffleBtnColor mx-2 my-2 float-left" >
+        Ejemplo 1
+      </a>
+    </div>
     <section class="col-sm-12 col-md-6 offset-md-3">
         <img src="img/CrpsWffls-Rusty-Logo-JPEG-edited.jpg" alt="" style="margin:60px 0px;width:100%">
         <p id="is-open" class="text-center">
