--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           </i>
         </p>
         <div class="row col-sm-12" style="margin:0px">
-          <div class="col-sm-12 col-md-6" style="padding:0px 5px">
+          <div class="col-sm-12 col-md-6" style="padding:5px">
             <button type="button" class="btn waffleBtn waffleBtnColor col-12" data-toggle="modal" data-target="#mapModal">
               Location
             </button>
           </div>
-          <div class="col-sm-12 col-md-6" style="padding:0px 5px">
+          <div class="col-sm-12 col-md-6" style="padding:5px">
             <button type="button" class="btn waffleBtn waffleBtnColor col-12" data-toggle="modal" data-target="#orderModal">
               Order
             </button>
