cuestiones de diseño

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-body">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
                   <h3 class="mx-auto text-center">IN CONSTRUCTION...</h3>
           				<h4 class="text-center w-100">MEANWHILE YOU CAN ORDER FROM US TO PICK UP</h4>
 
@@ -86,7 +89,7 @@
 
     </section>
 
-    <footer class="fixed-bottom">
+    <footer class="mx-auto mt-5">
       <p style="font-size:14px">Copyright © 2020 The Crepes and Waffles Bar - Todos los derechos reservados.</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
