ya lista la plantilla

--- a/index2.html
+++ b/index2.html
@@ -11,22 +11,21 @@
     <title>The Crepes and Waffles Bar</title>
   </head>
   <body class="col-sm-12 col-md-10 offset-md-1" >
-    <div class="fixed-top text-left">
-      <a href="index.html" type="button" class="btn waffleBtn waffleBtnColor mx-2 my-2 float-left" >
-        Ejemplo 1
-      </a>
-    </div>
     <section class="col-sm-12 col-md-6 offset-md-3">
         <img src="img/CrpsWffls-Rusty-Logo-JPEG-edited.jpg" alt="" style="margin:60px 0px;width:100%">
-        <p id="is-open" class="text-center">
+        <!-- <p id="is-open" class="text-center">
           <i class="glyphicon glyphicon-time">
             <span class="text"></span>
           </i>
-        </p>
+        </p> -->
     </section>
-		<section class="col-sm-12 col-md-6 offset-md-3 mt-5 mb-5">
+    <section class="col-sm-12 col-md-6 offset-md-3 mt-2 mb-2">
 			<div class="row col-sm-12" style="margin:0px">
-				<h3 class="mx-auto text-center">IN CONSTRUCTION...</h3>
+				<h3 class="mx-auto text-center">Temporarily closed. We are gonna reopen mid-June with exciting news. We hope to see you all soon :)</h3>
+		</section>
+		<!-- <section class="col-sm-12 col-md-6 offset-md-3 mt-5 mb-5">
+			<div class="row col-sm-12" style="margin:0px">
+				<h3 class="mx-auto text-center">Temporarily closed. We are gonna reopen mid-June with exciting news. We hope to see you all soon :)</h3>
 				<h4 class="text-center w-100">MEANWHILE YOU CAN ORDER FROM US TO PICK UP</h4>
 					<a href="https://www.doordash.com/store/qolibri-miami-676771/en-US" class="btn waffleBtn w-100 waffleBtnColor">Order Here</a>
 			</div>
@@ -37,13 +36,13 @@
 					<p class="col-sm-12 col-md-6 text-center">(786) 553 - 3562</p>
 				</div>
 			</div>
-		</section>
-		<section class="col-sm-12 col-md-8 offset-md-2 mt-5" style="padding:30px">
+		</section> -->
+		<!-- <section class="col-sm-12 col-md-8 offset-md-2 mt-5" style="padding:30px">
 			<p class="text-center" style="text-decoration:underline">3000 North Miami Avenue, Miami, Florida 33127, United States</p>
 			<div class="mapouter"><div class="gmap_canvas"><iframe  id="gmap_canvas" src="https://maps.google.com/maps?q=3000%20North%20Miami%20Avenue%2C%20Miami%2C%20Florida%2033127%2C%20United%20States&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style></style></div>
-		</section>
+		</section> -->
 
-    <footer class="mx-auto mt-5">
+    <footer class="mx-auto mt-2">
       <p style="font-size:14px" class="text-center">Copyright © 2020 The Crepes and Waffles Bar - Todos los derechos reservados.</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
