--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="alert alert-secondary mt-5">
         <h4 class="col-sm-12 text-center">Contact</h4>
         <div class="row">
-          <p class="col-sm-12 text-center" style="text-decoration:underline">3000 North Miami Avenue, Miami, Florida 33127, United States</p>
+          <p class="col-sm-12 text-center" style="text-decoration:underline"><i class="fas fa-map-marker-alt"></i> 3000 North Miami Avenue, Miami, Florida 33127, United States</p>
           <p class="col-sm-12 col-md-12 text-center"><i class="fas fa-envelope"></i> pau@qolibrimiami.com</p>
         </div>
       </div>
