--- a/index.html
+++ b/index.html
@@ -22,20 +22,29 @@
       </div>
 		</section>
     <section class="col-sm-12 col-md-6 offset-md-3 mt-5 mb-5">
-      <div class="alert alert-secondary mt-5">
-        <h4 class="col-sm-12 text-center">Contact</h4>
+        <h3 class="mx-auto text-center">Follow us on instagram!</h3>
+      <div class="text-center">
+        <a href="https://www.instagram.com/thecrepesandwafflesbar/" class="mx-auto" style="color:#3C3871"><i class="fab fa-instagram fa-5x" id="instaLogo" ></i></a>
+      </div>
+    </section>
+    <section class="col-sm-12 col-md-6 offset-md-3 mt-5 mb-5">
+      <div class="alert alert-info mt-5">
+        <h4 class="col-sm-12 text-center">Location</h4>
         <div class="row">
           <p class="col-sm-12 text-center" style="text-decoration:underline"><i class="fas fa-map-marker-alt"></i> 3000 North Miami Avenue, Miami, Florida 33127, United States</p>
-          <p class="col-sm-12 col-md-12 text-center"><i class="fas fa-envelope"></i> pau@qolibrimiami.com</p>
+          <div class="mapouter"><div class="gmap_canvas"><iframe  id="gmap_canvas" src="https://maps.google.com/maps?q=3000%20North%20Miami%20Avenue%2C%20Miami%2C%20Florida%2033127%2C%20United%20States&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style></style></div>
         </div>
       </div>
     </section>
     <section class="col-sm-12 col-md-6 offset-md-3 mt-5 mb-5">
-        <h3 class="mx-auto text-center">Follow us on instagram!</h3>
-      <div class="text-center">
-        <a href="https://www.instagram.com/thecrepesandwafflesbar/" class="mx-auto" style="color:#3C3871"><i class="fab fa-instagram fa-5x"></i></a>
+      <div class="alert alert-secondary mt-5">
+        <h4 class="col-sm-12 text-center">Contact</h4>
+        <div class="row">
+          <p class="col-sm-12 col-md-12 text-center"><i class="fas fa-envelope"></i> pau@qolibrimiami.com</p>
+        </div>
       </div>
     </section>
+
 
 
     <footer class="mx-auto mt-5">
